# UGBots_ROS

./: .gitignore  .gitignore~  DebugView.java  fds  gitignore  record.bash  run.bash  run.bash~  runworld.bash  script.bash  script.sh  script.sh~  setup.bash  setup.sh  setup.zsh  use-launch.bash  use-node.bash  worldinstances.inc
DebugView/: kill.bash  launchnodes.bash  runcore.bash  runtopic.bash  writeWorld.bash
DebugView/resources/: kill.bash  runcore.bash  runtests.bash  writeWorld.bash
DebugView/src/debugView/: ContentPanel.java  Main.java  Processes.java  ROSinit.java  infoPanel.java
JarResources/: finish.bash  kill.bash  launchnodes.bash  runtopic.bash  runworld.bash  writeWorld.bash  writeWorld.bash~
LauncherSourceCode/resources/: runmake.bash  runtopic.bash  runworld.bash
LauncherSourceCode/src/debugView/: ContentPanel.java  Main.java  Processes.java  ROSinit.java  infoPanel.java
ugbots_ros/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
ugbots_ros/include/: Pose.h  node.h  point.h  pose.h  speed.h  subscriber_list.h  unit.h
ugbots_ros/include/node_defs/: carrier.h  cat.h  dog.h  picker.h  possum.h  possum.h~  tractor.h  visitor.h  worker.h
ugbots_ros/include/node_structs/: orientation.h  point.h  pose.h  robot_details.h  row.h  speed.h  subscriber_list.h
ugbots_ros/include/ugbots_ros/: bin_status.h
ugbots_ros/launch/: .example.launch.swp  alpha.launch  beacon-test.launch  example.launch  example.launch~  example2.launch  readme.md  world.launch
ugbots_ros/msg/: bin_status.msg  picker_row.msg  robot_details.msg
ugbots_ros/msg_gen/cpp/include/ugbots_ros/: bin_status.h
ugbots_ros/msg_gen/lisp/: _package.lisp  _package_bin_status.lisp  bin_status.lisp  ugbots_ros-msg.asd
ugbots_ros/src/: Animal.cpp  Animal.cpp~  Animal.h  Animal.h~  CarrierBot.cpp  CarrierBot.cpp~  Human.h  Human.h~  People.cpp~  Person.cpp  Person.cpp~  PickerBot.cpp~  Pose.h~  PracBot.cpp  R0.cpp  R1.cpp  R1.cpp~  Robot.h  Robot.h~  Speed.h~  Subscriber.h~  Unit.h  template.cpp  test_node.cpp
ugbots_ros/src/Animals/: Animal.cpp  Animal.h  Dog.cpp
ugbots_ros/src/Debug/: DebugNode.cpp
ugbots_ros/src/Headers/: Pose.h  Speed.h  SubscriberList.h  Unit.h
ugbots_ros/src/People/: Farmer.cpp  Person.cpp  Person.cpp~
ugbots_ros/src/Robots/: CarrierBot.cpp  CarrierBot.cpp~  PickerBot.cpp
ugbots_ros/src/animal/: Animal.cpp  animal.cpp  cat.cpp  dog.cpp  possum.cpp
ugbots_ros/src/core/: beacon.cpp  core.cpp
ugbots_ros/src/node/: node.cpp
ugbots_ros/src/person/: farmer.cpp  tractor.cpp  visitor.cpp  worker.cpp
ugbots_ros/src/robot/: carrier.cpp  carrier_bot.cpp  picker.cpp
ugbots_ros/src/test/: carrier_test.cpp  cat_test.cpp  chicken_test.cpp  dog_test.cpp  picker_test.cpp  possum_test.cpp  visitor_test.cpp  worker_test.cpp
ugbots_ros/src/ugbots_ros/msg/: __init__.py  _bin_status.py
ugbots_ros/test/: carrier_test.cpp  cat_test.cpp  dog_test.cpp  mynode.test  node.test  picker_test.cpp  possum_test.cpp  test.launch  unit_tests.cpp  visitor_test.cpp  worker_test.cpp
world/: animalinstances.inc  animals.inc  beacon-test.world  beacon-test.world~  beaconcore.inc  boundary.inc  cmdCenter.inc  cmdCenter.inc~  dogs.inc  floor.inc  floor.inc~  kiwirow.inc  kiwirow.inc~  myworld.world  myworld.world~  myworld.world~~  orchard.world  orchard.world~  post.inc  post.inc~  robotinstances.inc  robotinstances.inc~  robots.inc  robots.inc~  script.sh  script.sh~  shrub.inc~  temptestworld.world  temptestworld.world~  tempworld.world  test.world  tree.inc~  treeExample.inc  workerinstances.inc  workerinstances.inc~  workers.inc  workers.inc~  worldinstances.inc  worldinstances.inc~
world/config/: animalinstances.inc  floorinstances.inc  floorinstances.inc~  workerinstances.inc~
world/models/: beaconcore.inc  binloc.inc  boundary.inc  cats.inc  cats.inc~  cmdCenter.inc  dogs.inc  kiwirow.inc  possums.inc  post.inc  robots.inc  shrub.inc  tractors.inc  tree.inc  tree.inc~  visitors.inc  workers.inc
